# archpy

./: .gitignore  README.md  pyproject.toml
archpy/adapters/: orm.py  repository.py
archpy/allocations/: model.py  service.py
archpy/domain/allocations/: exception.py  model.py
archpy/entrypoint/: app.py
archpy/service_layer/: services.py
tests/allocations/model/: test_batch.py
tests/allocations/service/: test_allocate.py
tests/unit/: test_allocate.py  test_batch.py
