[tool.poetry]
name = "archpy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
sqlalchemy = "^1.4.42"
psycopg2-binary = "^2.9.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-icdiff = "^0.6"
mypy = "^0.982"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
